# glWorld

./: CMakeLists.txt
glWorld/: main.cpp
glWorld2/: Shader.cpp  Shader.h  glad.c  main.cpp
src/part1/: CMakeLists.txt  main1.cpp
src/part2/: CMakeLists.txt  fragmentShader.glsl  main2.cpp  vertexShader.glsl
src/part3/: CMakeLists.txt  main.cpp
util/: CMakeLists.txt  IOTools.h  Shader.cpp  Shader.h
